tests/paczka1/fuzzy1/47680172.err
Error in line 2: A616 S447 85,3
Error in line 22: XqP S447 52,1
Error in line 29: GWX1x9HY A616 5,6
Error in line 35: qIiRdQcNkE A616 35,4
